--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<html>
+<head>
+<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
+<!-- <script src="jquery-3.4.1.min.js"></script>-->
 
+<link rel="stylesheet" type="text/css" href="mk1.css">
+
+<title>Score Sheet</title></head>
+<body>
+<div id="background"></div>
+<div id="header">Mario Kart Result</div>
+<br><br>
+
+<input type="radio" name="imagestyle" checked="checked">final
+<input type="radio" name="imagestyle">race
+<br>
+<input type="file" name="file" id="file"">
+<script type="text/javascript" src="mk1.js"></script>
+
+<input type="button" value="Exec" onclick="canvasDraw1()" tabindex="30">
+<br>
+<canvas id="canvas_result"></canvas>
+<script type="text/javascript" src="mk1_2.js"></script>
+
+<button id="download_button">download</button>
+
+<a id="download_link"></a>
+<div id="blank"></div>
+<div id="foot">
+<br>
+<a href="https://twitter.com/hooligan_mk8d"><img src="./images/Twitter_White.png" class="img_Twitter"> Twitter @hooligan_mk8d </a>
+<!--
+<a href="https://www.instagram.com"><img src="./images/Instagram_White.png" class="img_Instagram"></a>
+<a href="https://www.youtube.com"><img src="./images/Youtube_White.png" class="img_Youtube"></a>
+-->
+</div>
+</body>
+</html>
