--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
-<link rel="stylesheet" type="text/css" href="mk1.css">
+<link rel="stylesheet" type="text/css" href="mk1.css?0001">
 
 <title>Score Sheet</title></head>
 <body>
