--- a/ocrtest.html
+++ b/ocrtest.html
@@ -6,6 +6,7 @@
 <input type="file" name="file" id="myImage"">
 <script>
 function ocr() {
+console.log('aaa');
 const { TesseractWorker, OEM, PSM } = Tesseract;
 const worker = new TesseractWorker();
  
