--- a/ocrtest.html
+++ b/ocrtest.html
@@ -5,8 +5,11 @@
 <body>
 <input type="file" name="file" id="myImage"">
 <script>
+alert('aaa');                                            
 function ocr() {
+alert('aaa');
 console.log('aaa');
+                                            
 const { TesseractWorker, OEM, PSM } = Tesseract;
 const worker = new TesseractWorker();
  
