--- a/ocrtest.html
+++ b/ocrtest.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script src='https://unpkg.com/tesseract.js@v2.0.0-alpha.13/dist/tesseract.min.js'></script>
+<script src='https://unpkg.com/tesseract.js@2.0.0-alpha.13/dist/tesseract.min.js'></script>
 </head>
 <body>
 <input type="file" name="file" id="myImage"">
