--- a/test.html
+++ b/test.html
@@ -22,9 +22,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
+  <!--<meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">-->
   <title>Basic Usage</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
     const exampleImage = 'https://tesseract.projectnaptha.com/img/eng_bw.png';
     const worker = new Tesseract.TesseractWorker();
     worker.recognize(exampleImage)
-        .progress(progress => console.log('progress', progress))
+        .progress(progress => console.log('1progress', progress))
         .then(result => console.log('result', result))
         .finally(() => worker.terminate());
     const detectWorker = new Tesseract.TesseractWorker();
