--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <div id="header">Mario Kart Result</div>
 <br><br>
 
-<input type="radio" name="imagestyle" style="vertical-align:middle" checked="checked"><img src="./images/race_example.jpg" class="img_example">
-<input type="radio" name="imagestyle" style="vertical-align:middle"><img src="./images/final_example.jpg" class="img_example">
+<div style="vertical-align:middle><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example">
+<input type="radio" name="imagestyle" style="vertical-align:middle"><img src="./images/final_example.jpg" class="img_example"></div>
 <br>
 <input type="file" name="file" id="file"">
 <script type="text/javascript" src="mk1.js"></script>
