--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Score Sheet</title></head>
 <body>
 <div id="background"></div>
-<div id="header">Mario Kart Result</div>
+<div id="header">Mario Kart Result1</div>
 <br><br>
 
 <div style="vertical-align:middle><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example">
