--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <title>Score Sheet</title></head>
 <body>
 <div id="background"></div>
-<div id="header">Mario Kart Result1</div>
+<div id="header">Mario Kart Result</div>
 <br><br>
 
-<div style="vertical-align:middle><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example">
+<div style="vertical-align:middle"><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example">
 <input type="radio" name="imagestyle" style="vertical-align:middle"><img src="./images/final_example.jpg" class="img_example"></div>
 <br>
 <input type="file" name="file" id="file"">
