--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 <title>Score Sheet</title></head>
 <body>
 <div id="background"></div>
-<div id="header">Mario Kart Result1</div>
+<div id="header">Mario Kart Result</div>
 <br><br>
 
-  <div class="image_style">
+
 <label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label>
-<label><input type="radio" name="imagestyle" style="vertical-align:middle"><img src="./images/final_example.jpg" class="img_example"></label>
-  </div>
+<label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label>
+
 <br>
 <input type="file" name="file" id="file"">
 <script type="text/javascript" src="mk1.js"></script>
