--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 <body>
 <div id="background"></div>
 <div id="header">Mario Kart Result</div>
-<br><br>
-
-
+<br>
+(1) select image style
 <label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label>
 <label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label>
 
 <br>
+(2) choose the image
 <input type="file" name="file" id="file"">
+                                         
 <script type="text/javascript" src="mk1.js"></script>
 
 <input type="button" value="Exec" onclick="canvasDraw1()" tabindex="30">
