--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br>
 (1) select image style
 <br>
-<label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label>
+<label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example">(recommended)</label>
 <label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label>
 
 <br>
