--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <br>
 <label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label>
 <label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label>
-<br>(
+<br>(↑recommended)
 
 <br>
 <br>
