--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 <br>
 (1) select image style
 <br>
-<label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label>
-<label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label>
-<br>(↑recommended)
+<table><tr>
+<td><label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label></td>
+<td><label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label></td></tr>
+<tr><td colspan="2">(↑recommended)</td></tr></table>
 
 <br>
 <br>
