--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <table><tr>
 <td><label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label></td>
 <td><label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label></td></tr>
-<tr><td>(↑recommended)</td><td></td></tr></table>
+<tr><td style="text-align:center">(↑recommended)</td><td></td></tr></table>
 
 <br>
 <br>
