--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <br>
     (2) choose image
     <br>
-    <input type="file" name="file" id="file"">
+    <input type="file" name="file" id="file">
     <br>
     <br>
     (3) input player's points and team name
