--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta charset="utf-8"/>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
@@ -11,6 +12,10 @@
     <div id="background"></div>
     <div id="header">Mario Kart Result</div>
     <br>
+    <div style="text-align:left">
+      <a href="./jp.html"><img src="./images/Twitter_White.png" class=""> 日本語版 </a>
+      <img src="./images/Twitter_White.png" class=""> English 
+    </div>
     (1) select image style
     <br>
     <table>
