--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
     <div id="blank"></div>
     <div id="foot">
     <br>
-    <a href="https://twitter.com/hooligan_mk8d"><img src="./images/Twitter_White.png" class="img_Twitter"> Twitter @hooligan_mk8d </a>
+    <a href="https://twitter.com/hooligan_mk8d" class="linktext"><img src="./images/Twitter_White.png" class="img_Twitter"> Twitter @hooligan_mk8d </a>
     <!--
-    <a href="https://www.instagram.com"><img src="./images/Instagram_White.png" class="img_Instagram"></a>
-    <a href="https://www.youtube.com"><img src="./images/Youtube_White.png" class="img_Youtube"></a>
+    <a href="https://www.instagram.com" class="linktext"><img src="./images/Instagram_White.png" class="img_Instagram"></a>
+    <a href="https://www.youtube.com" class="linktext"><img src="./images/Youtube_White.png" class="img_Youtube"></a>
     -->
     </div>
   </body>
