--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div id="header">Mario Kart Result</div>
     <br>
     <div style="text-align:left">
-      <a href="./jp.html"><img src="./images/jpn.png" class=""> 日本語版 </a> / 
-      <img src="./images/us.png" class=""><img src="./images/gb.png" class=""> English 
+      <a href="./jp.html"><img src="./images/jpn.png" class="img_flag"> 日本語版 </a> / 
+      <img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English 
     </div>
     (1) select image style
     <br>
