--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="background"></div>
     <div id="header">Mario Kart Result</div>
     <br>
-    <div style="text-align:left">
+    <div style="text-align:right">
       <a href="./jp.html"><img src="./images/jpn.png" class="img_flag"> 日本語版 </a> / 
       <img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English 
     </div>
