--- a/jpn.html
+++ b/jpn.html
@@ -14,7 +14,7 @@
     <br>
     <div style="text-align:right">
       <img src="./images/jpn.png" class="img_flag"> 日本語版 / 
-      <a href="./jp.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <a href="./index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
     </div>
     (1) 画像の形式を選択
     <br>
