--- a/jpn.html
+++ b/jpn.html
@@ -23,7 +23,7 @@
       <td><label><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label></td>
       <td><label><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label></td>
       </tr><tr>
-      <td style="text-align:center">(↑recommended)</td><td></td>
+      <td style="text-align:center">(↑推奨)</td><td></td>
       </tr>
     </table>
 
@@ -38,7 +38,7 @@
     <br>
     <script type="text/javascript" src="mk1.js"></script>
 
-    <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
+    <input type="button" value="make scoreboard" onclick="canvasDraw1(jpn)" tabindex="30">
     <br>
     <br>
     <canvas id="canvas_result"></canvas>
