--- a/jpn.html
+++ b/jpn.html
@@ -38,7 +38,7 @@
     <br>
     <script type="text/javascript" src="mk1.js"></script>
 
-    <input type="button" value="make scoreboard" onclick="canvasDraw1(jpn)" tabindex="30">
+    <input type="button" value="make scoreboard" onclick="canvasDraw1('jpn')" tabindex="30">
     <br>
     <br>
     <canvas id="canvas_result"></canvas>
