--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <br>
     (3) input player's points and team name
     <br>
-    <script type="text/javascript" src="mk1.js"></script>
+    <script type="text/javascript" src="mk1.js">
+    var lang='eng';
+    </script>
 
     <input type="button" value="make scoreboard" onclick="canvasDraw1('eng')" tabindex="30">
     <br>
