--- a/jpn.html
+++ b/jpn.html
@@ -36,7 +36,9 @@
     <br>
     (3) 個人の得点とチーム名を入力
     <br>
-    <script type="text/javascript" src="mk1.js"></script>
+    <script type="text/javascript" src="mk1.js">
+      var lang = 'jpn';
+    </script>
 
     <input type="button" value="make scoreboard" onclick="canvasDraw1('jpn')" tabindex="30">
     <br>
