--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
     <br>
     (3) input player's points and team name
     <br>
+    <script type="text/javascript">
+      var lang='eng';
+    </script>
     <script type="text/javascript" src="mk1.js">
-    var lang='eng';
     </script>
 
     <input type="button" value="make scoreboard" onclick="canvasDraw1('eng')" tabindex="30">
