--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <script type="text/javascript" src="mk1.js">
     </script>
 
-    <input type="button" value="make scoreboard" onclick="canvasDraw1('eng')" tabindex="30">
+    <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
     <br>
     <br>
     <canvas id="canvas_result"></canvas>
