--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     <script type="text/javascript">
       var lang='eng';
     </script>
-    <script type="text/javascript" src="mk1.js">
+    <script type="text/javascript" src="table.js">
     </script>
 
     <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
     <br>
     <br>
     <canvas id="canvas_result"></canvas>
-    <script type="text/javascript" src="mk1_2.js"></script>
+    <script type="text/javascript" src="canvas.js"></script>
 
     <button id="download_button">download</button>
 
