--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
     <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
     <br>
+    <div style="font-size:1.5em">
+      Total pts =
+      <span id="total"></span>
+    </div>
     <br>
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
