--- a/jpn.html
+++ b/jpn.html
@@ -45,7 +45,7 @@
     <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
     <br>
     <div style="font-size:1.5em">
-      Total pts =
+      合計点 =
       <span id="total"></span>
     </div>
     <br>
