--- a/jpn.html
+++ b/jpn.html
@@ -13,7 +13,7 @@
     <div id="header">Mario Kart Result</div>
     <br>
     <div style="text-align:right">
-      <img src="./images/jpn.png" class="img_flag"> 日本語版 / 
+      <img src="./images/jpn.png" class="img_flag"> 日本語 / 
       <a href="./index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
     </div>
     (1) 画像の形式を選択
