--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">Mario Kart Result</div>
     <br>
     <div style="text-align:right">
-      <a href="./jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語版 </a> / 
+      <a href="./jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> / 
       <img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English 
     </div>
     (1) select image style
