--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 
     <link rel="stylesheet" type="text/css" href="mk1.css">
 
-    <title>Score Sheet</title>
+    <title>MarioKart Scoreboard</title>
   </head>
   <body>
     <div id="background"></div>
-    <div id="header">Mario Kart Result</div>
+    <div id="header">MarioKart Scoreboard</div>
     <br>
     <div style="text-align:right">
       <a href="./jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> / 
