--- a/jpn.html
+++ b/jpn.html
@@ -35,6 +35,7 @@
     <br>
     <br>
     (3) 個人の得点とチーム名を入力
+    (4) プレイヤーのチームを選択
     <br>
     <script type="text/javascript">
       var lang='jpn';
@@ -51,7 +52,8 @@
     <br>
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
-
+    <br>
+    (5) 集計画像のダウンロード
     <button id="download_button">download</button>
 
     <a id="download_link"></a>
