--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <br>
     <br>
     (3) input player's points and team name
+    (4) select player's team
     <br>
     <script type="text/javascript">
       var lang='eng';
@@ -51,7 +52,8 @@
     <br>
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
-
+    <br>
+    (5) download scoreboard as image
     <button id="download_button">download</button>
 
     <a id="download_link"></a>
