--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
     <input type="file" name="file" id="file">
     <br>
     <br>
-    (3) input player's points and team name
-    (4) select player's team
+    (3-1) input player's points and team name
+    <br>
+    (3-2) select player's team
     <br>
     <script type="text/javascript">
       var lang='eng';
@@ -53,7 +54,7 @@
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
     <br>
-    (5) download scoreboard as image
+    (4) download scoreboard as image 
     <button id="download_button">download</button>
 
     <a id="download_link"></a>
