--- a/jpn.html
+++ b/jpn.html
@@ -34,8 +34,9 @@
     <input type="file" name="file" id="file">
     <br>
     <br>
-    (3) 個人の得点とチーム名を入力
-    (4) プレイヤーのチームを選択
+    (3-1) 個人の得点とチーム名を入力
+    <br>
+    (3-2) プレイヤーのチームを選択
     <br>
     <script type="text/javascript">
       var lang='jpn';
@@ -53,7 +54,7 @@
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
     <br>
-    (5) 集計画像のダウンロード
+    (4) 集計画像のダウンロード 
     <button id="download_button">download</button>
 
     <a id="download_link"></a>
