--- a/jpn.html
+++ b/jpn.html
@@ -43,8 +43,10 @@
     </script>
     <script type="text/javascript" src="table.js">
     </script>
-
-    <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
+    <br>
+    (4) 集計の作成
+    <br>
+    <input type="button" value="作成" onclick="canvasDraw1()" tabindex="30">
     <br>
     <div style="font-size:1.5em">
       合計点 =
@@ -54,8 +56,9 @@
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
     <br>
-    (4) 集計画像のダウンロード 
-    <button id="download_button">download</button>
+    (5) 集計画像のダウンロード 
+    <br>
+    <button id="download_button">ダウンロード</button>
 
     <a id="download_link"></a>
     <div id="blank"></div>
