--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     </script>
     <script type="text/javascript" src="table.js">
     </script>
-
+    <br>
+    (4) make scoreboard
+    <br>
     <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
     <br>
     <div style="font-size:1.5em">
@@ -54,7 +56,7 @@
     <canvas id="canvas_result"></canvas>
     <script type="text/javascript" src="canvas.js"></script>
     <br>
-    (4) download scoreboard as image 
+    (5) download scoreboard as image 
     <button id="download_button">download</button>
 
     <a id="download_link"></a>
