--- a/test_index.html
+++ b/test_index.html
@@ -4,7 +4,7 @@
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
-    <link rel="stylesheet" type="text/css" href="mk1.css">
+    <link rel="stylesheet" type="text/css" href="test_mk1.css">
 
     <title>MarioKart Scoreboard</title>
   </head>
@@ -13,7 +13,7 @@
     <div id="header">MarioKart Scoreboard</div>
     <br>
     <div id="select_language">
-      <a href="./jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> /
+      <a href="./test_jpn.html"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> /
       <img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English
     </div>
     <div class="subject">(1) select image style</div>
@@ -41,7 +41,7 @@
     <script type="text/javascript">
       var lang='eng';
     </script>
-    <script type="text/javascript" src="table.js">
+    <script type="text/javascript" src="test_table.js">
     </script>
     <br>
     <div class="subject">(4) make scoreboard</div>
