--- a/test_jpn.html
+++ b/test_jpn.html
@@ -14,7 +14,7 @@
     <br>
     <div id="select_language">
       <img src="./images/jpn.png" class="img_flag"> 日本語 /
-      <a href="./index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <a href="./test_index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
     </div>
     <div class="subject">(1) 画像の形式を選択</div>
     <br>
