--- a/test_index.html
+++ b/test_index.html
@@ -31,8 +31,11 @@
     <br>
     <div class="subject">(2) choose image</div>
     <br>
-    <input type="file" name="file" id="file">
-    <br>
+	<label for="file" id="label_file">
+	select image file...
+	<input type="file" name="file" id="file">
+	</label>
+	<br>
     <br>
     <div class="subject">(3-1) input player's points and team name</div>
     <br>
@@ -46,7 +49,10 @@
     <br>
     <div class="subject">(4) make scoreboard</div>
     <br>
-    <input type="button" value="make scoreboard" onclick="canvasDraw1()" tabindex="30">
+    <label for="button_canvas" id="label_button_canvas">
+     make scoreboard
+    <input type="button" onclick="canvasDraw1()" tabindex="30" id="button_canvas">
+    </label>
     <br>
     <div class="text_total">
       Total pts =
