--- a/test_jpn.html
+++ b/test_jpn.html
@@ -32,7 +32,7 @@
     <div class="subject">(2) 結果画像をアップロード</div>
     <br>
     <label for="file" id="label_file">
-    画像ファイルを選択...
+    画像ファイルを選択
     <input type="file" name="file" id="file">
     </label>
     <br>
