--- a/test_index.html
+++ b/test_index.html
@@ -32,7 +32,7 @@
     <div class="subject">(2) choose image</div>
     <br>
 	<label for="file" id="label_file">
-	select image file
+	s<!--elect image file-->
 	<input type="file" name="file" id="file">
 	</label>
 	<br>
