--- a/v1_jpn.html
+++ b/v1_jpn.html
@@ -4,7 +4,7 @@
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
-    <link rel="stylesheet" type="text/css" href="mk1.css">
+    <link rel="stylesheet" type="text/css" href="v1_mk1.css">
 
     <title>MarioKart Scoreboard</title>
   </head>
@@ -14,7 +14,7 @@
     <br>
     <div style="text-align:right">
       <img src="./images/jpn.png" class="img_flag"> 日本語 / 
-      <a href="./index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <a href="./v1_index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
     </div>
     (1) 画像の形式を選択
     <br>
@@ -41,7 +41,7 @@
     <script type="text/javascript">
       var lang='jpn';
     </script>
-    <script type="text/javascript" src="table.js">
+    <script type="text/javascript" src="v1_table.js">
     </script>
     <br>
     (4) 集計の作成
