Update and rename test_index.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
-    <link rel="stylesheet" type="text/css" href="test_mk1.css">
+    <link rel="stylesheet" type="text/css" href="mk1.css">
 
     <title>Mario Kart Scoreboard</title>
   </head>
   <body>
     <div id="background"></div>
     <div id="header"><!--<img src="./images/icon_transparent.png" class="icon">--><span id="header_title" style="display: inline-block"><span class="css-br">Mario Kart </span>Scoreboard</span><span id="select_language">
-      <a href="./test_jpn.html" class="lang_text"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> /
+      <a href="./jpn.html" class="lang_text"><img src="./images/jpn.png" class="img_flag"> 日本語 </a> /
       <img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English
     </span></div>
     <br>
@@ -54,7 +54,7 @@
     <script type="text/javascript">
       var lang='eng';
     </script>
-    <script type="text/javascript" src="test_table.js">
+    <script type="text/javascript" src="table.js">
     </script>
     </div>
     <br>
