--- a/jpn.html
+++ b/jpn.html
@@ -5,7 +5,7 @@
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
-    <link rel="stylesheet" type="text/css" href="test_mk1.css">
+    <link rel="stylesheet" type="text/css" href="mk1.css">
 
     <title>Mario Kart Scoreboard</title>
   </head>
@@ -13,7 +13,7 @@
     <div id="background"></div>
     <div id="header"><!--<img src="./images/icon_transparent.png" class="icon">--><span id="header_title" style="display: inline-block"><span class="css-br">Mario Kart </span>Scoreboard</span><span id="select_language">
       <img src="./images/jpn.png" class="img_flag"> 日本語 /
-      <a href="./test_index.html" class="lang_text"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <a href="./index.html" class="lang_text"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
     </span></div>
     <br>
     <!--<div id="select_language">
@@ -54,7 +54,7 @@
     <script type="text/javascript">
       var lang='jpn';
     </script>
-    <script type="text/javascript" src="test_table.js">
+    <script type="text/javascript" src="table.js">
     </script>
     </div>
     <br>
