--- a/jpn.html
+++ b/jpn.html
@@ -28,7 +28,7 @@
       <td><label class="label_style"><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label></td>
       <td><label class="label_style"><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label></td>
       </tr><tr>
-      <td style="text-align:center">(↑推奨)</td><td></td>
+      <td style="text-align:center">(推奨)</td><td>(点数自動入力なし)</td>
       </tr>
     </table>
     <br>
