--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
 	select image file...
 	<input type="file" name="file" id="file">
 	</label>
+	<label for="button_reload" id="label_button_reload">
+     reload image file
+    <input type="button" onclick="reload()" id="button_reload">
+    </label>
 	<br>
     <br>
     </div>
