--- a/jpn.html
+++ b/jpn.html
@@ -43,6 +43,10 @@
     画像ファイルを選択...
     <input type="file" name="file" id="file">
     </label>
+	<label for="button_reload" id="label_button_reload">
+    画像を再ロード
+    <input type="button" onclick="reload()" id="button_reload">
+    </label>
     <br>
     <br>
     </div>
