--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
 
     <link rel="stylesheet" type="text/css" href="mk1.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico">
 
     <title>Mario Kart Scoreboard</title>
   </head>
