--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <td><label class="label_style"><input type="radio" name="imagestyle" checked="checked"><img src="./images/race_example.jpg" class="img_example"></label></td>
       <td><label class="label_style"><input type="radio" name="imagestyle"><img src="./images/final_example.jpg" class="img_example"></label></td>
       </tr><tr>
-      <td style="text-align:center">(recommended)</td><td>(OCR is unavailable)</td>
+      <td style="text-align:center">(recommended)</td><td></td>
       </tr>
     </table>
     <br>
