--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
     </label>
 	<br>
     <br>
+    <div id="img_result_parent"><img id="img_result"/></div>
+    <br>
+    <br>
     </div>
     <br>
     <br>
