--- a/lounge.html
+++ b/lounge.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 
-<link rel="stylesheet" type="text/css" href="test_mk1.css">
+<link rel="stylesheet" type="text/css" href="mk1.css">
 <link rel="shortcut icon" type="image/x-icon"
 	href="./images/favicon.ico">
 <script type="text/javascript" src="lounge.js"></script>
