--- a/lounge.html
+++ b/lounge.html
@@ -28,7 +28,7 @@
 	<br> (1)
 	<br> ↓Paste the full text by Boo bot (including "!scoreboard")
 	<br> (↓ここに!scoreboardを含む全文をペーストしてください。)
-	<input type="button" value="load example" onclick="loadExample();">
+	<input type="button" value="load example" onclick="loadExample();" style="height:2em">
 	<br>
 	<textarea id="inputText" style="width: 80%; height: 10em"></textarea>
 	<br>
