--- a/lounge.html
+++ b/lounge.html
@@ -27,7 +27,7 @@
 	</div>
 	<br> (1)
 	<br> ↓Paste the full text by Boo bot (including "!scoreboard")
-	<br> (↓ここに!scoreboardを含む全文をペーストしてください。)
+	<br> (↓ここに!scoreboardを含む全文(Boo botの組み分け結果)をペーストしてください。)
 	<input type="button" value="load example" onclick="loadExample();"  id="loadExample">
 	<br>
 	<textarea id="inputText"></textarea>
