--- a/lounge.html
+++ b/lounge.html
@@ -14,7 +14,7 @@
 	<div id="header">
 		<!--<img src="./images/icon_transparent.png" class="icon">-->
 		<span id="header_title" style="display: inline-block"><span
-			class="css-br">Converter </span>for Lounge</span>
+			class="css-br">Support tool </span>for Lounge</span>
 		<span id="select_language">
 			<a href="https://hlgn.github.io/mariokart-scoreboard"style="color:white">MarioKart<br>Scoreboard<br></a>
 			<!--
