--- a/lounge.html
+++ b/lounge.html
@@ -33,19 +33,21 @@
 	<textarea id="inputText"></textarea>
 	<br>
 	<br> (2)<br>
+	↓jump to this link<br>
 	<br>
-	<label for="convert" id="label_button_reload"> convert text <input
+	<label for="convert" id="label_button_reload"> make table (hlorenzi's table maker) <input
 		type="button" value="convert" onclick="converter();" id="convert">
 	</label>
+	<br><br>
+	click  <a id="link"href="https://gb.hlorenzi.com/table">here</a> when the page doesn't make a transition.
 	<br>
 	<br>
-	<br>
-	<textarea id="outputText"></textarea>
+	<!-- <textarea id="outputText"></textarea> -->
 	<br>
 	<br>
 	<!-- <input type="button" value="クリップボードにコピー" onclick="copy();"><br>
 	<br>-->
-	(3)<br>
+	<!--(3)<br>
 	↓jump to this link
 	<br>
 	<br>
@@ -53,7 +55,7 @@
 		href="https://gb.hlorenzi.com/table"
 		style="text-decoration: none; color: #fff">make table (hlorenzi's
 			table maker)</a>
-	</label>
+	</label>-->
 	<br>
 	<br>
 	<br>
