--- a/lounge.html
+++ b/lounge.html
@@ -53,8 +53,8 @@
 	<br>
 	<label for="link" id="label_button_reload"> <a id="link"
 		href="https://gb.hlorenzi.com/table"
-		style="text-decoration: none; color: #fff">make table (hlorenzi's
-			table maker)</a>
+		style="text-decoration: none; color: #fff">make table (Lorenzi's
+			Game Boards)</a>
 	</label>-->
 	<br>
 	<br>
