--- a/lounge.html
+++ b/lounge.html
@@ -7,7 +7,7 @@
 <link rel="shortcut icon" type="image/x-icon"
 	href="./images/favicon.ico">
 <script type="text/javascript" src="lounge.js"></script>
-<title>String Converter for Lounge Scoreboard</title>
+<title>Lounge tool</title>
 </head>
 <body>
 	<div id="background"></div>
