--- a/jpn.html
+++ b/jpn.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-160714283-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-160714283-1');
+	</script>
+
     <meta charset="utf-8"/>
 <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
 <!-- <script src="jquery-3.4.1.min.js"></script>-->
@@ -19,7 +29,7 @@
     <br>
     <!--<div id="select_language">
       <img src="./images/jpn.png" class="img_flag"> 日本語 /
-      <a href="./test_index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
+      <a href="./index.html"><img src="./images/us.png" class="img_flag"><img src="./images/gb.png" class="img_flag"> English  </a>
     </div>-->
     <div class="subject">(1) 画像の形式を選択</div>
     <div class="contents">
